<resources>
    <string name="direcciontitulo">Direccion:</string>
    <string name="direccion">Cra 32 Cl 41 AA Sur Bloque 3-3 (Interior 503)</string>
    <string name="autortitulo">Autor:</string>
    <string name="autor">Emanuel Gómez Díaz</string>
    <string name="Login">Login</string>
    <string name="Usuario">Usuario</string>
    <string name="Contraseña">Contraseña</string>
    <string name="Ingresar">Ingresar</string>
    <string name="Validar">Validar</string>
    <string name="MenuTitulo">Menú</string>

    <string name="menu1">Renta Hotel</string>
    <string name="menu2">Prestamos</string>
    <string name="menu3">Salir</string>
    <string name="menu4">Archivo</string>

    <string name="TidCliente">ID USUARIO</string>
    <string name="Tnombre">NOMBRE</string>
    <string name="Ttelefono">TELEFONO</string>
    <string name="TidHotel">ID HOTEL</string>
    <string name="Thabitacion">HABITACIÓN</string>
    <string name="TfechaEntrada">FECHA ENTRADA</string>
    <string name="TfechaSalida">FECHA SALIDA</string>
    <string name="Tdias">DIAS HOSPEDAJE</string>
    <string name="TvalorDia">VALOR DIA</string>
    <string name="Benviar">CONFIRMAR</string>
    <string name="loro">Loro</string>
    <string name="loroo">TODO</string>
</resources>